Edit images folder

--- a/templates/index.html
+++ b/templates/index.html
@@ -88,26 +88,68 @@
                         </div>
                     </form>
                 </div>
-            </aside>
+            </aside> 
             <div class="body">
                 <ul class="content-list">
                     <li class="content-item">
                         <a href="">
-                            <img src="../images/Layer 31.png" alt="">
+                            <img src="../images/img_1.jpg" alt="">
                             <h4>NECK SHOULDER PAIN</h4>
                             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
                         </a>
                     </li>
                     <li class="content-item">
                         <a href="">
-                            <img src="../images/Layer 31.png" alt="">
+                            <img src="../images/img_2.jpg" alt="">
                             <h4>NECK SHOULDER PAIN</h4>
                             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
                         </a>
                     </li>
                     <li class="content-item">
                         <a href="">
-                            <img src="../images/Layer 31.png" alt="">
+                            <img src="../images/img_3.jpg" alt="">
+                            <h4>NECK SHOULDER PAIN</h4>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                        </a>
+                    </li>
+                    <li class="content-item">
+                        <a href="">
+                            <img src="../images/img_4.jpg" alt="">
+                            <h4>NECK SHOULDER PAIN</h4>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                        </a>
+                    </li>
+                    <li class="content-item">
+                        <a href="">
+                            <img src="../images/img_5.jpg" alt="">
+                            <h4>NECK SHOULDER PAIN</h4>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                        </a>
+                    </li>
+                    <li class="content-item">
+                        <a href="">
+                            <img src="../images/img_6.jpg" alt="">
+                            <h4>NECK SHOULDER PAIN</h4>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                        </a>
+                    </li>
+                    <li class="content-item">
+                        <a href="">
+                            <img src="../images/img_7.jpg" alt="">
+                            <h4>NECK SHOULDER PAIN</h4>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                        </a>
+                    </li>
+                    <li class="content-item">
+                        <a href="">
+                            <img src="../images/img_8.jpg" alt="">
+                            <h4>NECK SHOULDER PAIN</h4>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                        </a>
+                    </li>
+                    <li class="content-item">
+                        <a href="">
+                            <img src="../images/img_9.jpg" alt="">
                             <h4>NECK SHOULDER PAIN</h4>
                             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
                         </a>
