--- a/templates/index.html
+++ b/templates/index.html
@@ -5,190 +5,217 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SPECIALIZED CLINIC</title>
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
     <header>
-        <section class="header-top">
-            <div class="header-top-logo">
-                <a href="" class="logo"><img src="../images/logo.png" alt=""></a>
-                <h2>SPECIALIZED CLINIC</h2>
-                <p>Physiotherapy - Rehabilitation</p>
+        <div class="header-top">
+            <div class="container">
+                <div class="header-top-logo">
+                    <a href="" class="logo"><img src="../images/logo.png" alt=""></a>
+                    <h2>SPECIALIZED CLINIC</h2>
+                    <p>Physiotherapy - Rehabilitation</p>
+                </div>
+                <div class="header-top-contact">
+                    <a href="">
+                        <img src="../images/icon-phone.png" alt="">
+                    </a>
+                    <p><strong>Question for the doctor?</strong><span>05113941 977</span></p>
+                </div>
             </div>
-            <div class="header-top-contact">
-                <a href="">
-                    <img src="../images/phone.png" alt="">
-                    <p><strong>Question for the doctor?</strong></p>
-                    <h3>05113941 977</h3>
-                </a>
-            </div>
-        </section>
+        </div>
         <nav class="header-navbar">
-            <div class="header-menu">
-                <ul class="header-menu-links">
-                    <li><a href="">HOME</a></li>
-                    <li><a href="">ABOUT US</a></li>
-                    <li><a href="">HEALTH SERVICES</a></li>
-                    <li><a href="">REGULAR MEDICINE</a></li>
-                    <li><a href="">SET CALENDAR</a></li>
-                    <li><a href="">CONSULT & CONTACT</a></li>
-                </ul>
-            </div>
-            <div class="header-social-network">
-                <ul class="header-social-links">
-                    <li><a href=""><img src="../images/facebook.png" alt=""></a></li>
-                    <li><a href=""><img src="../images/google.png" alt=""></a></li>
-                    <li><a href=""><img src="../images/youtube.png" alt=""></a></li>
-                </ul>
+            <div class="container">
+                <div class="header-menu">
+                    <ul class="header-menu-links">
+                        <li class="menu-item"><a href="">HOME</a></li>
+                        <li class="menu-item"><a href="">ABOUT US</a></li>
+                        <li class="menu-item"><a href="">HEALTH SERVICES</a></li>
+                        <li class="menu-item"><a href="">REGULAR MEDICINE</a></li>
+                        <li class="menu-item"><a href="">SET CALENDAR</a></li>
+                        <li class="menu-item"><a href="">CONSULT & CONTACT</a></li>
+                    </ul>
+                </div>
+                <div class="header-social-network">
+                    <ul class="header-social-links">
+                        <li class="social-item"><a href=""><img src="../images/icon-facebook.png" alt=""></a></li>
+                        <li class="social-item"><a href=""><img src="../images/icon-google+.png" alt=""></a></li>
+                        <li class="social-item"><a href=""><img src="../images/icon-youtube.png" alt=""></a></li>
+                    </ul>
+                </div>
             </div>
         </nav>
     </header>
     <main class=main>
         <section class="banner">
-            <a href=""><img src="../images/banner.png" alt=""></a>
-            <p>HOME / HEALTH SERVICES</p>
+            <img src="../images/banner.png" alt="">
+            <div class="container">
+                <ul class="breadcrumb-list">
+                    <li><a href="">HOME</a> / </li>
+                    <li>HEALTH SERVICES</li>
+                </ul>
+            </div>
         </section>
         <section class="main-body">
-            <aside class="sidebar">
-                <div class="category">
-                    <ul class="category-parent">
-                        <li class="category-parent-item"><a href="">ADULTS</a>
-                            <ul class="category-child">
-                                <li class="category-child-item"><a href="">Neck-shoulder-hand pain</a></li>
-                                <li class="category-child-item"><a href="">Spinal pain</a></li>
-                                <li class="category-child-item"><a href="">Disc herniation</a></li>
-                                <li class="category-child-item"><a href="">Knee joint, hip joint</a></li>
-                                <li class="category-child-item"><a href="">Footsore</a></li>
-                                <li class="category-child-item"><a href="">Diseases of the muscles</a></li>
-                                <li class="category-child-item"><a href="">Peripheral neuropathy</a></li>
-                                <li class="category-child-item"><a href="">Sequelae of stroke</a></li>
-                                <li class="category-child-item"><a href="">Traumatic sequelae</a></li>
-                            </ul>
+            <div class="container">
+                <aside class="sidebar">
+                    <div class="category">
+                        <ul class="category-parent">
+                            <li class="category-parent-item"><a href="">ADULTS <span> - </span> </a>
+                                <ul class="category-child">
+                                    <li class="category-child-item"><a href="">Neck-shoulder-hand pain</a></li>
+                                    <li class="category-child-item"><a href="">Spinal pain</a></li>
+                                    <li class="category-child-item"><a href="">Disc herniation</a></li>
+                                    <li class="category-child-item"><a href="">Knee joint, hip joint</a></li>
+                                    <li class="category-child-item"><a href="">Footsore</a></li>
+                                    <li class="category-child-item"><a href="">Diseases of the muscles</a></li>
+                                    <li class="category-child-item"><a href="">Peripheral neuropathy</a></li>
+                                    <li class="category-child-item"><a href="">Sequelae of stroke</a></li>
+                                    <li class="category-child-item"><a href="">Traumatic sequelae</a></li>
+                                </ul>
+                            </li>
+                            <li class="category-parent-item"><a href="">CHILDREN <span>+</span> </a></li>
+                        </ul>
+                    </div>
+                    <div class="book-schedule">
+                        <span><h3>BOOK SCHEDULE</h3></span>
+                        <form action="" method="post">
+                            <div class="form-group">
+                                <input type="text" class="form-control" name="full_name" id="full-name"
+                                    placeholder="Full Name">
+                            </div>
+                            <div class="form-group">
+                                <input type="text" class="form-control" name="address" id="address"
+                                    placeholder="Address">
+                            </div>
+                            <div class="form-group">
+                                <input type="tel" class="form-control" name="phone_number" id="phone_number"
+                                    placeholder="Phone number">
+                            </div>
+                            <div class="form-group">
+                                <input type="date" class="form-control" name="time" id="time" value="Time">
+                            </div>
+                            <div class="form-group">
+                                <button class="form-control button" type="submit">SEND</button>
+                            </div>
+                        </form>
+                    </div>
+                </aside>
+                <div class="body">
+                    <ul class="service-list">
+                        <li class="service-item">
+                            <a href="">
+                                <img src="../images/img_1.jpg" alt="">
+                                <h4>NECK SHOULDER PAIN</h4>
+                            </a>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                            <a href="">-></a>
                         </li>
-                        <li class="category-parent-item"><a href=""></a>CHILDREN</li>
+                        <li class="service-item">
+                            <a href="">
+                                <img src="../images/img_2.jpg" alt="">
+                                <h4>NECK SHOULDER PAIN</h4>
+                            </a>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                            <a href="">-></a>
+                        </li>
+                        <li class="service-item">
+                            <a href="">
+                                <img src="../images/img_3.jpg" alt="">
+                                <h4>NECK SHOULDER PAIN</h4>
+                            </a>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                            <a href="">-></a>
+                        </li>
+                        <li class="service-item">
+                            <a href="">
+                                <img src="../images/img_4.jpg" alt="">
+                                <h4>NECK SHOULDER PAIN</h4>
+                            </a>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                            <a href="">-></a>
+                        </li>
+                        <li class="service-item">
+                            <a href="">
+                                <img src="../images/img_5.jpg" alt="">
+                                <h4>NECK SHOULDER PAIN</h4>
+                            </a>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                            <a href="">-></a>
+                        </li>
+                        <li class="service-item">
+                            <a href="">
+                                <img src="../images/img_6.jpg" alt="">
+                                <h4>NECK SHOULDER PAIN</h4>
+                            </a>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                            <a href="">-></a>
+                        </li>
+                        <li class="service-item">
+                            <a href="">
+                                <img src="../images/img_7.jpg" alt="">
+                                <h4>NECK SHOULDER PAIN</h4>
+                            </a>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                            <a href="">-></a>
+                        </li>
+                        <li class="service-item">
+                            <a href="">
+                                <img src="../images/img_8.jpg" alt="">
+                                <h4>NECK SHOULDER PAIN</h4>
+                            </a>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                            <a href="">-></a>
+                        </li>
+                        <li class="service-item">
+                            <a href="">
+                                <img src="../images/img_9.jpg" alt="">
+                                <h4>NECK SHOULDER PAIN</h4>
+                            </a>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                            <a href="">-></a>
+                        </li>
                     </ul>
                 </div>
-                <div class="book-schedule">
-                    <h3>BOOK SCHEDULE</h3>
-                    <form action="" method="post">
-                        <div class="form-group">
-                            <input type="text" class="form-control" name="full_name" id="full-name" value="Full Name">
-                        </div>
-                        <div class="form-group">
-                            <input type="text" class="form-control" name="address" id="address" value="Address">
-                        </div>
-                        <div class="form-group">
-                            <input type="tel" class="form-control" name="phone_number" id="phone_number" value="Phone number">
-                        </div>
-                        <div class="form-group">
-                            <input type="date" class="form-control" name="time" id="time" value="Time">
-                        </div>
-                        <div class="form-group">
-                            <button class="form-control button"type="submit">SEND</button>
-                        </div>
-                    </form>
-                </div>
-            </aside> 
-            <div class="body">
-                <ul class="content-list">
-                    <li class="content-item">
-                        <a href="">
-                            <img src="../images/img_1.jpg" alt="">
-                            <h4>NECK SHOULDER PAIN</h4>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-                        </a>
-                    </li>
-                    <li class="content-item">
-                        <a href="">
-                            <img src="../images/img_2.jpg" alt="">
-                            <h4>NECK SHOULDER PAIN</h4>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-                        </a>
-                    </li>
-                    <li class="content-item">
-                        <a href="">
-                            <img src="../images/img_3.jpg" alt="">
-                            <h4>NECK SHOULDER PAIN</h4>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-                        </a>
-                    </li>
-                    <li class="content-item">
-                        <a href="">
-                            <img src="../images/img_4.jpg" alt="">
-                            <h4>NECK SHOULDER PAIN</h4>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-                        </a>
-                    </li>
-                    <li class="content-item">
-                        <a href="">
-                            <img src="../images/img_5.jpg" alt="">
-                            <h4>NECK SHOULDER PAIN</h4>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-                        </a>
-                    </li>
-                    <li class="content-item">
-                        <a href="">
-                            <img src="../images/img_6.jpg" alt="">
-                            <h4>NECK SHOULDER PAIN</h4>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-                        </a>
-                    </li>
-                    <li class="content-item">
-                        <a href="">
-                            <img src="../images/img_7.jpg" alt="">
-                            <h4>NECK SHOULDER PAIN</h4>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-                        </a>
-                    </li>
-                    <li class="content-item">
-                        <a href="">
-                            <img src="../images/img_8.jpg" alt="">
-                            <h4>NECK SHOULDER PAIN</h4>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-                        </a>
-                    </li>
-                    <li class="content-item">
-                        <a href="">
-                            <img src="../images/img_9.jpg" alt="">
-                            <h4>NECK SHOULDER PAIN</h4>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-                        </a>
-                    </li>
-                </ul>
             </div>
         </section>
     </main>
     <footer class="footer">
-        <div class="footer-top">
-            <div class="about-us">
-                <h4>ABOUT US</h4>
-                <ul>
-                    <li><a href="">GENERAL INTRODUCTION</a></li>
-                    <li><a href="">HUMAN</a></li>
-                    <li><a href="">FACILITIES AND FACILITIES..</a></li>
-                </ul>
-            </div>
-            <div class="support">
-                <h4>SUPPORT</h4>
-                <ul>
-                    <li><a href="">HEALTH COUNSELING</a></li>
-                    <li><a href="">REGULAR MEDICINE</a></li>
-                    <li><a href="">SCHEDULE APPOINTMENTS</a></li>
-                </ul>
-            </div>
-            <div class="social">
-                <h4>SOCIAL CONNECTION</h4>
-                <ul>
-                    <li><a href=""><img src="../images/facebook.png" alt=""> FACEBOOK</a></li>
-                    <li><a href=""><img src="../images/google.png" alt=""> GOOGLE+</a></li>
-                    <li><a href=""><img src="../images/youtube.png" alt=""> YOUTUBE</a></li>
-                </ul>
+        <div class="container">
+            <div class="footer-top">
+                <div class="about-us">
+                    <h4>ABOUT US</h4>
+                    <ul>
+                        <li><a href="">GENERAL INTRODUCTION</a></li>
+                        <li><a href="">HUMAN</a></li>
+                        <li><a href="">FACILITIES AND FACILITIES..</a></li>
+                    </ul>
+                </div>
+                <div class="support">
+                    <h4>SUPPORT</h4>
+                    <ul>
+                        <li><a href="">HEALTH COUNSELING</a></li>
+                        <li><a href="">REGULAR MEDICINE</a></li>
+                        <li><a href="">SCHEDULE APPOINTMENTS</a></li>
+                    </ul>
+                </div>
+                <div class="social">
+                    <h4>SOCIAL CONNECTION</h4>
+                    <ul>
+                        <li><a href=""><img src="../images/icon-facebook.png" alt=""> FACEBOOK</a></li>
+                        <li><a href=""><img src="../images/icon-google+.png" alt=""> GOOGLE+</a></li>
+                        <li><a href=""><img src="../images/icon-youtube.png" alt=""> YOUTUBE</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
-        <hr>
         <div class="footer-bottom">
-            <p>&copy; 2018 - COPYRIGHT OF SPECIALIZED CLINIC</p>
-            <p>DESIGN BY QUOC DOANH</p>
+            <div class="container">
+                <p>&copy; 2018 - COPYRIGHT OF SPECIALIZED CLINIC</p>
+                <p class="author">DESIGN BY <a href="">QUOC DOANH</a> </p>
+            </div>
         </div>
     </footer>
 </body>
