--- a/css/style.css
+++ b/css/style.css
@@ -97,19 +97,25 @@ body a {
     float: left;
     margin-left: 10px;
 }
-.banner {
+.breadcrumb {
+    height: 160px;
+    background-image: url(../images/banner.png);
+    background-size: cover;
+    background-position: center;
     position: relative;
 }
-.banner img {
-    width: 100%;
-}
+
 .breadcrumb-list {
     position: absolute;
-    top: 75px;
-    margin-left: 0px;
+    display: inline-block;
+    top: 50%;
+    transform: translateY(-50%);
 }
 .breadcrumb-list li {
-    display: inline;
+    float: left;
+}
+.breadcrumb-list a:hover{
+    color: #00ced1;
 }
 .main-body {
     margin-top: 70px;
@@ -191,47 +197,184 @@ body a {
     float: right;
     width: 75%;
 }
-.service-list .service-item {
+.product-item {
     float: left;
     width: 31%;
     height: 325px;
     margin-bottom: 20px;
     margin-left: 2%;
-    border: 0.5px solid #696969;
+    border: 0.5px solid #ebebeb;
     border-top: none;
-    position: relative;
+    position: relative; 
+    overflow: hidden;
 }
-.service-item::after{
+.product-item::after{
     content: "";
     clear: both;
     display: block;
 }
-.service-item img {
+.product-item img {
     width: 100%;
     height: 185px;
     margin-bottom: 25px;
-    box-sizing: border-box;
+    transition: all 0.5s;
+    transform: scale(1);
+    
 }
-.service-item h4 {
+.product-item img:hover{
+    transform: scale(1.2);
+}
+.product-item h4 {
     margin-bottom: 20px;
     margin-left: 20px;
     font-weight: bold;
 }
-.service-item p {
+.product-item p {
     margin-left: 20px;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: 15px;
 }
-.service-item a:last-child {
+.price {
     position: absolute;
-    font-size: 12px;
-    width: 15px;
+    font-size: 20px;
+    font-weight: bold;
     height: 15px;
-    right: 0px;
-    bottom: 0px;
-    background-color: #00ced1;
-    color: #ffffff;
+    left: 0px;
+    bottom: 10px;
+    color: #000000;
     text-align: center;
+}
+.cart-img {
+    position: fixed;
+    right: 100px;
+    bottom: 20px;
+    border-radius: 30px;
+}
+.sup {
+    position: absolute;
+    top: 17px;
+    right: 17px;
+    font-size: 12px;
+}
+.cart-img:hover {
+    background-color: #ff0000;
+}
+.add-cart {
+    position: absolute;
+    height: 30px;
+    right: 5px;
+    bottom: 5px;
+    background-color:  #00ced1;
+    color: #ffffff;
+    border: 1px solid #ebebeb;
+    text-align: center;
+}
+.add-cart:hover{
+    background-color: #ff0000;
+}
+.cart-header {
+    font-weight: bold;
+    color: #333;
+    text-align: center;
+    font-size: 2.5em;
+}
+.cart-row {
+    display: flex;
+}
+.cart-row:last-child {
+    border-bottom: 1px solid black;
+}
+.cart-row:last-child .cart-column {
+    border: none;
+}
+.cart-body {
+    font-weight: bold;
+    font-size: 1.25em;
+    color: #333;
+}
+.cart-column {
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid black;
+    margin-right: 1.5em;
+    padding-bottom: 10px;
+    margin-top: 10px;
+}
+.cart-item {
+    width: 45%;
+}
+.cart-item-img{
+    width: 75px;
+    height: auto;
+    border-radius: 10px;
+}
+.cart-item-title {
+    color: #333;
+    margin-left: .5em;
+    font-size: 1.2em;
+}
+.cart-price {
+    width: 20%;
+    font-size: 1.2em;
+    color: #333;
+}
+.cart-qty {
+    width: 35%;
+}
+.cart-qty-input {
+    height: 34px;
+    width: 50px;
+    border-radius: 5px;
+    border: 1px solid #56CCF2;
+    background-color: #eee;
+    color: #333;
+    padding: 0;
+    text-align: center;
+    font-size: 1.2em;
+    margin-right: 25px;
+}
+.cart-total {
+    text-align: end;
+    margin-top: 10px;
+    margin-right: 10px;
+}
+.cart-total-title {
+    font-weight: bold;
+    font-size: 1.5em;
+    color: black;
+    margin-right: 20px;
+}
+.cart-total-price {
+    color: #333;
+    font-size: 1.1em;
+}
+.btn {
+    text-align: center;
+    vertical-align: middle;
+    padding: .67em .67em;
+    cursor: pointer;
+}
+.btn:hover {
+    background-color: #0000cd;
+}
+.btn-primary {
+    color: white;
+    background-color: #56CCF2;
+    border: none;
+    border-radius: .3em;
+    font-weight: bold;
+}
+.btn-danger {
+    color: white;
+    background-color: #EB5757;
+    border: none;
+    border-radius: .3em;
+    font-weight: bold;
+}
+.btn-purchase {
+    display: block;
+    margin: 40px auto 80px auto;
+    font-size: 1.75em;
 }
 .footer {
     background-color: #62c6f8;
@@ -302,12 +445,12 @@ body a {
 /* === Breakpoints === */
 /* === Desktop first === */
 @media screen and (max-width: 1023px) and (min-width: 768px) {
-    .service-list .service-item {
+    .service-list .product-item {
       width: 45%;
     }
   }
   @media screen and (max-width: 767px) {
-    .service-list .service-item {
+    .service-list .product-item {
       width: 100%;
     }
   }
