--- a/templates/index.html
+++ b/templates/index.html
@@ -49,12 +49,11 @@
         </nav>
     </header>
     <main class=main>
-        <section class="banner">
-            <img src="../images/banner.png" alt="">
+        <section class="breadcrumb">
             <div class="container">
                 <ul class="breadcrumb-list">
-                    <li><a href="">HOME</a> / </li>
-                    <li>HEALTH SERVICES</li>
+                    <li><a href="index.html">HOME</a> /&nbsp;</li>
+                    <li>HEALTH SERVICES </li>
                 </ul>
             </div>
         </section>
@@ -104,81 +103,16 @@
                     </div>
                 </aside>
                 <div class="body">
-                    <ul class="service-list">
-                        <li class="service-item">
-                            <a href="">
-                                <img src="../images/img_1.jpg" alt="">
-                                <h4>NECK SHOULDER PAIN</h4>
-                            </a>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-                            <a href="">-></a>
-                        </li>
-                        <li class="service-item">
-                            <a href="">
-                                <img src="../images/img_2.jpg" alt="">
-                                <h4>NECK SHOULDER PAIN</h4>
-                            </a>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-                            <a href="">-></a>
-                        </li>
-                        <li class="service-item">
-                            <a href="">
-                                <img src="../images/img_3.jpg" alt="">
-                                <h4>NECK SHOULDER PAIN</h4>
-                            </a>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-                            <a href="">-></a>
-                        </li>
-                        <li class="service-item">
-                            <a href="">
-                                <img src="../images/img_4.jpg" alt="">
-                                <h4>NECK SHOULDER PAIN</h4>
-                            </a>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-                            <a href="">-></a>
-                        </li>
-                        <li class="service-item">
-                            <a href="">
-                                <img src="../images/img_5.jpg" alt="">
-                                <h4>NECK SHOULDER PAIN</h4>
-                            </a>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-                            <a href="">-></a>
-                        </li>
-                        <li class="service-item">
-                            <a href="">
-                                <img src="../images/img_6.jpg" alt="">
-                                <h4>NECK SHOULDER PAIN</h4>
-                            </a>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-                            <a href="">-></a>
-                        </li>
-                        <li class="service-item">
-                            <a href="">
-                                <img src="../images/img_7.jpg" alt="">
-                                <h4>NECK SHOULDER PAIN</h4>
-                            </a>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-                            <a href="">-></a>
-                        </li>
-                        <li class="service-item">
-                            <a href="">
-                                <img src="../images/img_8.jpg" alt="">
-                                <h4>NECK SHOULDER PAIN</h4>
-                            </a>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-                            <a href="">-></a>
-                        </li>
-                        <li class="service-item">
-                            <a href="">
-                                <img src="../images/img_9.jpg" alt="">
-                                <h4>NECK SHOULDER PAIN</h4>
-                            </a>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-                            <a href="">-></a>
-                        </li>
+                    <ul class="product-list">
+                        
                     </ul>
                 </div>
+            </div>
+            <div class="cart-img">
+                <a href="cart.html">
+                    <img src="../images/cart.png" alt="" width="50px" height="50px">
+                    <span class="sup">0</span>
+                </a>
             </div>
         </section>
     </main>
@@ -218,6 +152,8 @@
             </div>
         </div>
     </footer>
+
+    <script src="../js/script.js"></script>
 </body>
 
 </html>
